--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Tasks</h1>
 
-<table>
-  <thead>
+<table class= 'table table-hover' >
+  <thead class= "thread-dark">
     <tr>
       <th>Task</th>
       <th>Date</th>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
+<%= link_to 'Add Task', new_task_path %>
