--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,5 +15,10 @@
   <%= @task.description %>
 </p>
 
+<p>
+  <strong>Category:</strong>
+  <%= @task.category %>
+</p>
+
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
