--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -13,10 +13,20 @@
           <%= link_to 'Add task', new_task_path, class:"nav-link"%>
         </li>
       </ul>
-      <form class="d-flex">
+      <%= form_tag(search_task_path, :method => "get",   
+        class: 'navbar-form navbar-left') do %>  
+          <div class="input-group">  
+            <%= search_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>  
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </div>  
+      <% end %>
+      <!-- <form class="d-flex">
+        <% form_tag search_task_path, :method => 'get' do %>
+
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+        <% end %>
+      </form> -->
     </div>
   </div>
 </nav>
