--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_field :date %>
   </div>
 
+   <div class="field">
+    <%= form.label :category %>
+    <%= form.text_field :category %>
+  </div>
+
   <div class="field">
     <%= form.label :description %>
     <%= form.text_field :description %>
