--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,7 +8,8 @@
       <th>Task</th>
       <th>Date</th>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th>Category</th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -18,6 +19,7 @@
         <td><%= task.task %></td>
         <td><%= task.date %></td>
         <td><%= task.description %></td>
+        <td><%= task.category %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
